--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,19 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@smui/button": "^1.0.0",
+    "@smui/menu-surface": "^1.0.0",
+    "@smui/textfield": "^1.0.0",
     "rollup": "^2.32.1",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-svelte": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.29.0",
     "svelte": "^3.29.0"
   },
   "dependencies": {
+    "@smui/icon-button": "^1.0.0",
     "compressorjs": "^1.0.6",
     "moment": "^2.29.1",
     "sirv-cli": "^1.0.8"
