--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,11 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "cors": "^2.8.5",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
-    "express-jwt": "^6.0.0",
-    "express-ws": "^4.0.0",
+    "express-session": "^1.17.1",
     "fs": "0.0.2",
-    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "node-html-parser": "^1.3.1",
     "request": "^2.88.2"
