db import users only

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -4,7 +4,7 @@ FROM mongo
 COPY mongoimport.sh /docker-entrypoint-initdb.d/
 
 # data to import
-COPY entries.json /docker-entrypoint-initdb.d/
+#COPY entries.json /docker-entrypoint-initdb.d/
 
 # data to import
 COPY users.json /docker-entrypoint-initdb.d/
