--- a/server/client/package.json
+++ b/server/client/package.json
@@ -7,23 +7,28 @@
     "start": "sirv -H localhost public"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@smui/button": "^1.0.0",
-    "@smui/menu-surface": "^1.0.0",
-    "@smui/textfield": "^1.0.0",
-    "rollup": "^2.32.1",
+    "@rollup/plugin-commonjs": "17.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@smui/button": "^1.1.0",
+    "@smui/chips": "^1.1.0",
+    "@smui/icon-button": "^2.0.0-beta.0",
+    "@smui/menu-surface": "^1.1.0",
+    "@smui/tab": "^2.0.0-beta.0",
+    "@smui/tab-bar": "^2.0.0-beta.0",
+    "@smui/textfield": "^1.1.0",
+    "postcss": "^8.2.4",
+    "rollup": "^2.38.0",
+    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-svelte": "^6.1.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.29.0",
-    "svelte": "^3.29.0"
+    "sass": "^1.32.5",
+    "svelte": "^3.31.2"
   },
   "dependencies": {
-    "@smui/icon-button": "^1.0.0",
-    "compressorjs": "^1.0.6",
+    "compressorjs": "^1.0.7",
     "moment": "^2.29.1",
-    "sirv-cli": "^1.0.8"
+    "sirv-cli": "^1.0.10"
   }
 }
