menu stuff (WIP)

--- a/server/client/package.json
+++ b/server/client/package.json
@@ -11,7 +11,9 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@smui/button": "^1.1.0",
     "@smui/chips": "^1.1.0",
+    "@smui/drawer": "^2.0.0-beta.0",
     "@smui/icon-button": "^2.0.0-beta.0",
+    "@smui/list": "^2.0.0-beta.0",
     "@smui/menu-surface": "^1.1.0",
     "@smui/tab": "^2.0.0-beta.0",
     "@smui/tab-bar": "^2.0.0-beta.0",
